; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_UI_PlayCinematic.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/ui/extr_ui_main.c_UI_PlayCinematic.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CIN_loop = common dso_local global i32 0, align 4
@CIN_silent = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, float, float, float, float)* @UI_PlayCinematic to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @UI_PlayCinematic(i8* %0, float %1, float %2, float %3, float %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca float, align 4
  %8 = alloca float, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store i8* %0, i8** %6, align 8
  store float %1, float* %7, align 4
  store float %2, float* %8, align 4
  store float %3, float* %9, align 4
  store float %4, float* %10, align 4
  %11 = load i8*, i8** %6, align 8
  %12 = load float, float* %7, align 4
  %13 = load float, float* %8, align 4
  %14 = load float, float* %9, align 4
  %15 = load float, float* %10, align 4
  %16 = load i32, i32* @CIN_loop, align 4
  %17 = load i32, i32* @CIN_silent, align 4
  %18 = or i32 %16, %17
  %19 = call i32 @trap_CIN_PlayCinematic(i8* %11, float %12, float %13, float %14, float %15, i32 %18)
  ret i32 %19
}

declare dso_local i32 @trap_CIN_PlayCinematic(i8*, float, float, float, float, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
